<resources>
    <string name="app_name">Truck It ZayLabs for Drivers</string>

    <!-- Login-->
    <string name="Sign_In_btn">Sign In</string>
    <string name="btnSignInDesc">Sign In</string>
    <string name="Email">Enter Email</string>
    <string name="Email_Desc">Enter Valid Email</string>
    <string name="Hint_Email">Enter registered email</string>
    <string name="Password">Enter Password</string>
    <string name="Password_Desc">Password</string>
    <string name="Hint_Password">Enter Password</string>
    <string name="Register_login">Register</string>
    <string name="Forget_Password">Forget Password ?</string>
    <string name="Home">Home</string>
    <string name="take_photo_prompt">Upload Picture</string>
    <string name="camera_button_text">Upload</string>
    <string name="imagelink">ImageLink</string>
    <string name="chooseimage">Choose Image:</string>
    <string name="payment">Payment</string>
    <!--Registration-->
    <string name="Register_btn">Register</string>
    <string name="Email_Register">Email</string>
    <string name="Email_R_Hint">Ente email to register</string>
    <string name="Password_Register">Password</string>
    <string name="Password_R_Hint">Password Min Characters 6</string>
    <string name="Phone_Number">Enter Phone Number</string>
    <string name="Hint_Phone">+92 123 4567890</string>
    <string name="Company_Name">Company Name</string>
    <string name="NotRegistered">Not Registered ?</string>
    <!--Forget Password-->
    <string name="Forget_Email">Email Address</string>

    <!--User Profile-->
    <string name="btnUpdate">Save</string>
    <string name="Image_View">Image</string>
    <string name="Phone_Number1">Default Phone</string>
    <string name="Alt_Number">Alternate Number</string>

    <!--Cargo Details-->
    <string name="CargoDetail">Item Description</string>
    <string name="GatePassImage">Gate Pass Image</string>
    <string name="Weight">Approx Weight</string>
    <string name="Units">Approx Units</string>

    <!--Vehicle Type-->
    <string name="VehicleType1">Suzuki Open</string>
    <string name="VehicleType2">Suzuki Closed</string>
    <string name="VehicleType3">Riksha</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="document">Documents</string>
    <string name="action_settings">Settings</string>
    <string name="get_help">Get Help</string>
    <string name="log_out">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile">Profile</string>
    <string name="CNIC">CNIC</string>
    <string name="UploadLicense">Upload License</string>
    <string name="VehicleRegistrationNumber">Vehicle Reg:Number</string>
    <string name="CarType1">Suzuki</string>
    <string name="CarTYpe2">Riksha</string>
    <string name="AcceptTerms">Accept Terms</string>
    <string name="ProfilePicture">Set Profile Piture</string>
    <string name="back">Return to Login</string>
    <string name="wallet">Wallet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Profile-->
    <string name="backto">Home</string>
    <string name="customer_name">Name</string>
    <string name="customer_number">Phone</string>
    <string name="btn_confirm">Confirm</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--Location -->
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <!--Location-->


</resources>

