<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Home"
        android:orderInCategory="1"
        android:title="@string/home"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/History"
        android:orderInCategory="2"
        android:title="@string/history"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/payment_history"
        android:orderInCategory="3"
        android:title="@string/payment"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/get_help"
        android:orderInCategory="5"
        android:title="@string/get_help"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="6"
        android:title="@string/log_out"
        app:showAsAction="collapseActionView" />
</menu>
