<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaylabs.truckitzaylabsv1driver.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/etSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Email_Desc"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            tools:ignore="LabelFor"
            android:layout_marginTop="40sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Hint_Password"
            android:inputType="textPassword"
            android:layout_marginBottom="40sp"
            />



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Register_btn"
            android:text="@string/Register_btn"
            android:background="@color/primaryColor"
            android:gravity="center"

            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>

<!--<EditText
android:id="@+id/etPhone"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/Hint_Password"
android:inputType="phone"
android:text="@string/Phone_Number" />-->
