<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zaylabs.truckitzaylabsv1driver.SignInActivity">

    <ImageView
        android:id="@+id/displaypic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_name"
        />

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displaypic"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_password"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/Sign_In_btn"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:id="@+id/textviewForgetPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Forget_Password"
            android:layout_gravity="end"
            android:gravity="end"
            android:maxLines="2"
            android:layout_marginBottom="60dp"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_sign_in"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/fiel_RegisterTextView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:text="@string/NotRegistered"
            android:layout_gravity="center"
            android:maxLines="1"
            android:fontFamily="sans-serif"
            android:textSize="18dp"

            />
    </LinearLayout>

</RelativeLayout>